--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
